# PDH

./: .gitignore  pdh.cfg  pylintrc  pyproject.toml  requirements.txt  setup.cfg
DATA/L1K1/L2K4/: L3K15s.1  L3K15s.2  L3K15s.3  L3K15s.4  L3K4s.1  L3K5s.1  L3K5s.2  (+5 more)
DATA/L1K2/: s.0  s.1  s.5  s.7  v - Copy.2  v.1  v.2  v.3
Development/: overview.txt
Development/LAS/: LAS 30a_Revised_2010.las
Development/PYTHON/: LASParser.py  NodeLoop.py  Shell_CStats_Rev2.py  Shell_Rev1.py  Shell_Rev2  Shell_Rev2.py  Shell_Rev2_Cross_Plot.py  Shell_Rev2_Hist.py  Shell_Rev2_Well_Log_Plot.py  Shell_VShale_Rev2  Shell_VShale_Rev2.py  Test_wrrf.py  adnod.py  config.py  country.py  first.tcl  frend.py  gui.py  ip.py  ip_rev1.py  ip_rev2.py  mwindows.py  ns2path.py  pdh_files.py  rlas_rev1.py  rlas_rev_dcf.py  rlas_rev_dcf_raf.py  test_build_node_files.py  test_pdh_files.py  test_pdh_files_better.py  ut_crprog.py  ut_cruser.py  ut_listprog.py
Development/PyQt/: PyQT_BigExample.py  PyQt5_leanpubdemo.py  PyQt_Menu2.py  PyQt_Rev1.py  QT_Menubar.py  dir_model.py  pyqt5_list.py
USER/L1K1/: L2K4s.5  L2K4s.6  L2K4s.7
USER/L1K4/: 's.10'.txt  s.0  s.1
src/pdh/: Shell_CStats_Rev2.py  Shell_Rev2.py  Shell_Rev2_Cross_Plot.py  Shell_Rev2_Hist.py  Shell_Rev2_Well_Log_Plot.py  Shell_VShale_Rev2.py  __main__.py  adnod.py  config.py  frend.py  frend_gui.py  ft2m.py  gui.py  hist.py  ip.py  las_parser.py  node_loop.py  ns2path.py  pdh_files.py  rlas_rev_dcf.py  rlas_rev_dcf_raf.py  ut_crprog.py  ut_crspec.py  ut_cruser.py  ut_listprog.py
tests/: conftest.py  test_adnod.py  test_las_parser.py
(+158 files in other folders)
