[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdh"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "PyQt5",
    "matplotlib",
    "numpy",
    "pytest",
]

[project.scripts]
pdh = "pdh.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint.messages_control]
disable = ["W0312", "C0330", "C0103", "locally-disabled"]

[tool.pylint.format]
max-line-length = 160
